force-app/main/default/objects/Career__c/Career__c.object-meta.xml
<CustomObject>
    <label>Career</label>
    <nameField>
        <displayFormat>CA-{000000}</displayFormat>
        <label>Applicant No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Careers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>