force-app/main/default/objects/Career__c/fields/Interviewed__c.field-meta.xml
<CustomField>
    <fullName>Interviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interviewed</label>
    <type>Checkbox</type>
</CustomField>