force-app/main/default/objects/Career__c/fields/Linkedin__c.field-meta.xml
<CustomField>
    <fullName>Linkedin__c</fullName>
    <label>Linkedin</label>
    <type>Url</type>
</CustomField>