force-app/main/default/objects/Career__c/fields/RelatedVacancy__c.field-meta.xml
<CustomField>
    <fullName>RelatedVacancy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Vacancy</label>
    <referenceTo>Vacancy__c</referenceTo>
    <relationshipLabel>Submitted Applications</relationshipLabel>
    <relationshipName>SubmittedApplications</relationshipName>
    <type>Lookup</type>
</CustomField>