force-app/main/default/objects/Career__c/listViews/Account_Executive.listView-meta.xml
<ListView>
    <fullName>Account_Executive</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Email__c</columns>
    <columns>Position__c</columns>
    <columns>Interviewed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Position__c</field>
        <operation>equals</operation>
        <value>Account Executive</value>
    </filters>
    <label>Account Executive</label>
</ListView>