force-app/main/default/objects/Career__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Interviewed__c</columns>
    <columns>Name__c</columns>
    <columns>Passed__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Position__c</columns>
    <columns>Linkedin__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>