force-app/main/default/objects/Career__c/listViews/Customer_Service_Representative.listView-meta.xml
<ListView>
    <fullName>Customer_Service_Representative</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Email__c</columns>
    <columns>Position__c</columns>
    <columns>Interviewed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Position__c</field>
        <operation>equals</operation>
        <value>Customer Service Representative</value>
    </filters>
    <label>Customer Service Representative</label>
</ListView>