force-app/main/default/objects/Career__c/listViews/Front_End_Developer.listView-meta.xml
<ListView>
    <fullName>Front_End_Developer</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Email__c</columns>
    <columns>Position__c</columns>
    <columns>Interviewed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Position__c</field>
        <operation>equals</operation>
        <value>Front End Developer</value>
    </filters>
    <label>Front End Developer</label>
</ListView>