force-app/main/default/objects/Career__c/listViews/Growth_Hacker.listView-meta.xml
<ListView>
    <fullName>Growth_Hacker</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Email__c</columns>
    <columns>Position__c</columns>
    <columns>Interviewed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Position__c</field>
        <operation>equals</operation>
        <value>Growth Hacker</value>
    </filters>
    <label>Growth Hacker</label>
</ListView>