force-app/main/default/objects/Career__c/listViews/Salesforce_Admin.listView-meta.xml
<ListView>
    <fullName>Salesforce_Admin</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Email__c</columns>
    <columns>Position__c</columns>
    <columns>Interviewed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Position__c</field>
        <operation>equals</operation>
        <value>Salesforce Admin</value>
    </filters>
    <label>Salesforce Admin</label>
</ListView>