force-app/main/default/objects/Career__c/listViews/Script_Writer.listView-meta.xml
<ListView>
    <fullName>Script_Writer</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Email__c</columns>
    <columns>Position__c</columns>
    <columns>Interviewed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Position__c</field>
        <operation>equals</operation>
        <value>Script Writer</value>
    </filters>
    <label>Script Writer</label>
</ListView>