force-app/main/default/objects/Career__c/listViews/SEO_Ninja.listView-meta.xml
<ListView>
    <fullName>SEO_Ninja</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Email__c</columns>
    <columns>Position__c</columns>
    <columns>Interviewed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Position__c</field>
        <operation>equals</operation>
        <value>SEO Ninja</value>
    </filters>
    <label>SEO Ninja</label>
</ListView>